2003-06-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amflush.c: Implement new -b and -s options.
	* man/amflush.8.in: Document it.

2003-06-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c (dump_to_tape): Don't go in degraded mode if
	  taper reply DONE.

2003-06-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/output-rait.c: Don't call waitpid if we didn't fork.

2003-06-04  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amverify.sh.in: Use @MAXTAPEBLOCKSIZE@ instead of 32.

2003-06-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Bug reported by Sven Rudolph <rudsve@drewag.de>

	* server-src/holding.c (mkholdingdir): New function to create a holding
	  directory.
	* server-src/holding.h (mkholdingdir): Prototype.
	* server-src/driver.c: Use mkholdingdir;
	* server-src/dumper.c: Call mkholdingdir before opening a file for
	  writing.

2003-06-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/amstatus.pl.in: Fix for missing amdump.1 or amflush.1.

2003-06-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/amstatus.pl.in: If nothing is active, it now gives the
	  status of the last run (amdump or amflush).
	* man/amstatus.8.in: Document it.

2003-05-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/output-file.c (check_online): Write error if opendir failed.

2003-05-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/amoverview.pl.in: Use 'amadmin <conf> disklist' instead
	  of parsing the disklist file.

2003-05-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/tapefile.c (read_tapelist,parse_tapeline): Fix for
	  previous patch.

2003-05-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>
